--- a/currencyratewidget/translations/en.json
+++ b/currencyratewidget/translations/en.json
@@ -8,7 +8,8 @@
  "tooltip-3": "Історія",
  "history-date": "Дата",
  "history-rate": "Курс",
- "history-diff": "Різниця %"
+ "history-diff": "Різниця %",
+ "closes": "Закрити"
 },
 
  "en": {
@@ -21,6 +22,7 @@
  "tooltip-3": "History",
  "history-date": "Date",
  "history-rate": "Rate",
- "history-diff": "Difference %"
+ "history-diff": "Difference %",
+ "closes": "Close"
 }}
 
